8213232: Unix/X11 setCompositionEnableNative issue

Reviewed-by: serb